# efaciency

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml  test.yml
efaciency/: __init__.py  block.py  cli.py  constants.py  settlement_period.py  sp.py  utils.py
tests/: test_block.py  test_cli.py  test_settlement_period.py  test_sp.py  test_utils.py
