[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "efaciency"
authors = [{name = "Matthieu Paturet"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/capcir/efaciency"

[tool.ruff]
line-length = 100
output-format = "concise"
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
]
